testsuite/tests/explicit-dicts/should_fail/Incoherence5.stderr

Incoherence5.hs:10:6: warning: [-Wsimplifiable-class-constraints (in -Wdefault)]
    • The constraint ‘SomeClass a’ matches an instance declaration
      instance SomeClass a -- Defined at Incoherence5.hs:7:10
      This makes type inference for inner bindings fragile;
        either use MonoLocalBinds, or simplify it using the instance
    • In the type signature: f :: SomeClass a => a -> a

Incoherence5.hs:18:8: warning: [-Wincoherence (in -Wdefault)]
    • Explicit dictionary application to: ‘SomeClass a’
      is not allowed because of possible incoherence:
        There is a global instance for ‘SomeClass a’
    • In the expression: f notDict True
      In an equation for ‘test’:
          test
            = f notDict True
            where
                notDict = SomeClass.Dict not

<no location info>: error: 
Failing due to -Werror.
